gcc/testsuite/g++.dg/init/aggr11.C
@@ -1,0 +1,13 @@
+// PR c++/49132
+
+struct A {
+  const int m;
+};
+
+A a1 = {};
+
+struct B {
+  A a;
+};
+
+B b1 = {};
